# esp32-zodiac-tri-expert

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  README.md  extra_bytes.txt  good_ID_response  sdkconfig  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32c6  sdkconfig.old  start_update_server  version.txt
components/my_ota/: CMakeLists.txt  Kconfig.projbuild  my_ota.c  my_ota.h
components/protocol_examples_common/: CMakeLists.txt  Kconfig.projbuild  wifi_connect.c
components/wifi_connect/: CMakeLists.txt  Kconfig.projbuild  connect.c  wifi_connect.c
components/wifi_connect/include/: wifi_connect.h  wifi_connect_private.h
drawings/: #board.dxf  board.dxf  klemme.dxf
main/: CMakeLists.txt  Kconfig.projbuild  aql_config.h  aql_main.c  aql_main.h  aql_prot.c  aql_prot.h  aql_task.c  aql_task.h  flash.c  flash.h  mqtt_stuff.c  mqtt_stuff.h  my_ota.c  sample_credentials.h  sniplets.c  tri-expert.c  tri-expert.h  wifi.c  wifi.h
update_server/: start_update_server.sh
